# RobotLabManagerWebApp

./: .dockerignore  Dockerfile  README.md  Schedule Templates (1).xlsx  Week by Week Flow (2).xlsx  generate_cascade_template.py
.github/workflows/: keep-warm.yml
backend/: .env.example  check_env.py  main.py  parse_templates.py  pyproject.toml  requirements.txt  roster_api.py  schedule_api.py  weekbyweek_api.py
backend/migrations/: 001_schedule_slots.sql  002_schedule_templates.sql  003_operator_roster.sql
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ChartErrorBoundary.tsx  Layout.css  Layout.tsx  PanelCard.tsx  PilotDashboard.tsx  api.ts  constants.ts  plotlyPlot.tsx  scheduleApi.ts  types.ts
frontend/src/schedule/: AddGroupModal.tsx  EditableText.tsx  GroupBlock.tsx  PilotViewPanel.tsx  RosterPage.tsx  ScheduleEditor.tsx  ScheduleHome.tsx  activityFills.ts  model.ts  schedule.css  transpose.ts
frontend/src/weekbyweek/: WeekbyWeekFlow.tsx  flowGraph.ts  parseXlsx.ts  recalc.ts  types.ts  weekbyweek.css
