[project]
name = "pilot-data-viewer-api"
version = "0.1.0"
description = "FastAPI backend for Pilot Data Viewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0",
]

[tool.uv]
package = false
